Got full base of website done, need to implement form submission and add details in text

--- a/index.html
+++ b/index.html
@@ -3,148 +3,277 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
-
+  <title>Everlead</title>
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-        <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-        </div>
-        <br><br>
-
-      </div>
-    </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
-  </div>
-
-
-  <div class="container">
-    <div class="section">
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s8 m8 l8">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-        </div>
-        <div class="col s4 m4 l4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
-
-  <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
-  </footer>
-
-
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+  
+  <!-- Navbar -->
+  <div class="navbar-fixed">
+    <nav class="teal" role="navigation">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo center"><img src="./images/EverleadLogo.png" alt="logo"/></a>
+        <ul class="left hide-on-med-and-down">
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#services">How we serve</a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#students">For College Students</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+        <ul id="nav-mobile" class="sidenav">
+          <li><a class="sidenav-close" href="#about">About Us</a></li>
+          <li><a class="sidenav-close" href="#services">How we serve</a></li>
+          <li><a class="sidenav-close" href="#students">For College Students</a></li>
+          <li><a class="sidenav-close" href="#contact">Contact Us</a></li>
+        </ul>
+        <!-- Turns navbar menu items to sidenav on mobile -->
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </div>
+
+  <!-- Index Banner: What user sees when they first go to site -->
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <!-- Banner text -->
+        <div class="row center">
+          <h1 class="header col s12 white-text">
+            Imagine a World Where Every Person Embraces their Fullest Potential
+          </h1>
+        </div>
+        <br><br>
+      </div>
+    </div>
+    <div class="parallax"><img src="./images/indexBanner.jpg" alt="index banner image"></div>
+  </div>
+
+  <div class="divider"></div>
+
+  <!--About section-->
+  <div id="about" class="container scrollspy">
+    <div class="section">
+      <div class="row center">
+        <h4 class="deep-orange-text text-darken-4">About Everlead</h4>
+        <div class="col s12 m12 l12"><p><b>Founded:</b></p></div>
+        <div class="col s12 m12 l12"><p>Lorem Ipsum Lorem Ipsum</p></div>
+        <div class="col s12 m12 l12"><p><b>Vission:</b></p></div>
+        <div class="col s12 m12 l12"><p>Lorem Ipsum Lorem Ipsum</b></p></div>
+        <div class="col s12 m12 l12"><p><b>Mission:</b></p></div>
+        <div class="col s12 m12 l12"><p>Lorem Ipsum Lorem Ipsum</p></div>
+        <div class="col s12 m12 l12"><p><b>Founder:</b></p></div>
+        <div class="col s12 m12 l12"><p>Ijeoma Chinwe</p></div>
+      </div>
+    </div>
+    
+    <div class="section">
+      <!-- Values Section -->
+      <div class="row">
+        <div class="col s12 m4 l4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">visibility</i></h2>
+            <h5 class="center">Wisdom</h5>
+          </div>
+        </div>
+        <div class="col s12 m4 l4">
+          <div class="icon-block">
+            <h2 class="center cyan-text"><i class="material-icons">sentiment_very_satisfied</i></h2>
+            <h5 class="center">Passion</h5>
+          </div>
+        </div>
+        <div class="col s12 m4 l4">
+          <div class="icon-block">
+            <h2 class="center teal-text"><i class="material-icons">record_voice_over</i></h2>
+            <h5 class="center">Empathy</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col s12 m2 l2">
+          <div class="icon-block">
+            &nbsp;
+          </div>
+        </div>
+        <div class="col s12 m4 l4">
+          <div class="icon-block">
+            <h2 class="center green-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">Inclusion</h5>
+          </div>
+        </div>
+        <div class="col s12 m4 l4">
+          <div class="icon-block">
+            <h2 class="center light-green-text text-darken-4"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Purpose</h5>
+          </div>
+        </div>
+        <div class="col s12 m2 l2">
+          <div class="icon-block">
+            &nbsp;
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="divider"></div>
+
+  <!-- Services section -->
+  <div id="services" class="container scrollspy">
+    <div class="section">
+      <div class="row center">
+        <h4 class="deep-orange-text text-darken-4">How We Serve</h4>
+      </div>
+      <div class="row">
+        <div class="col s12 center">
+          <h5><b>Speaking</b></h5>
+          <p class="left-align">
+            <b>Topics: </b>
+          </p>
+          <p class="left-align light">
+            Lorem Ipsum, Lorem Ipsum, Lorem Ipsum, Lorem Ipsum
+          </p>
+          <p class="left-align">
+            <b>Formats:</b>
+          </p>
+          <p class="left-align light">
+            Lorem Ipsum, Lorem Ipsum, Lorem Ipsum, Lorem Ipsum
+          </p>
+          <h5>Browse Photos</h5>
+          <!-- Insert Carousel here with images -->
+          <div class="carousel" style="margin-top: -10%">
+            <a class="carousel-item" href="#one!"><img src="./images/speaking1.jpeg"></a>
+            <a class="carousel-item" href="#two!"><img src="./images/speaking2.jpg"></a>
+            <a class="carousel-item" href="#three!"><img src="./images/speaking3.jpg"></a>
+            <a class="carousel-item" href="#four!"><img src="./images/speaking4.jpg"></a>
+            <a class="carousel-item" href="#five!"><img src="./images/speaking5.jpeg"></a>
+          </div>
+          <h5 style="margin-top: -70px;"><b>Coaching</b></h5>
+          <p class="left-align">
+            <b>One-on-Ones: </b>
+          </p>
+          <p class="left-align light">
+            Lorem Ipsum, Lorem Ipsum, Lorem Ipsum, Lorem Ipsum
+          </p>
+          <p class="left-align">
+            <b>Groups:</b>
+          </p>
+          <p class="left-align light">
+            Lorem Ipsum, Lorem Ipsum, Lorem Ipsum, Lorem Ipsum
+          </p>
+          <h5>Browse Photos</h5>
+          <!-- Insert Carousel here with images -->
+          <div class="carousel" style="margin-top: -10%">
+            <a class="carousel-item" href="#one!"><img src="./images/speaking1.jpeg"></a>
+            <a class="carousel-item" href="#two!"><img src="./images/speaking2.jpg"></a>
+            <a class="carousel-item" href="#three!"><img src="./images/speaking3.jpg"></a>
+            <a class="carousel-item" href="#four!"><img src="./images/speaking4.jpg"></a>
+            <a class="carousel-item" href="#five!"><img src="./images/speaking5.jpeg"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="divider" style="margin-top: -10%"></div>
+
+  <!-- Students section-->
+  <div id="students" class="container scrollspy">
+    <div class="section">
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>For College Students</h4>
+          <p class="left-align light">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc 
+            nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. 
+            Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, 
+            bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper 
+            molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non 
+            tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="divider"></div>
+
+  <!-- Contact section-->
+  <div id="contact" class="container scrollspy">
+    <div class="section">
+      <div class="row">
+
+        <div class="col s12 m12 l12 center">
+          <h4>Contact Us</h4>
+          <div class="row">
+            <form class="col s12">
+              <div class="input-field col s6 m6 l6">
+                <input id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6 m6 l6">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
+              <div class="input-field col s12 m12 l12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+              <div class="input-field col s12 m12 l12">
+                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                <label for="textarea1">Message</label>
+              </div>
+              <div class="col s12 m12 l12">
+                <div class="col s8 m10 l10">&nbsp;</div>
+                <button class="btn waves-effect waves-light col s4 m2 l2" type="submit" name="action">
+                  Submit
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
+            </form>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <h5>Find us on social media!</h5>
+              <!-- Add social media chips here! -->
+              <div class="chip">
+                <a href="www.facebook.com">Facebook</a>
+                <img src="./images/fbIcon.png" alt="Contact Person">
+              </div>
+              <div class="chip">
+                <a href="www.linkedin.com">LinkedIn</a>
+                <img src="./images/linkedinIcon.png" alt="Contact Person">
+              </div>
+              <div class="chip">
+                <a href="www.twitter.com">Twitter</a>
+                <img src="./images/twitterIcon.png" alt="Contact Person">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    
+  <footer class="page-footer teal">
+    <div class="footer-copyright">
+      <div class="container">
+        © 2019 Copyright Ijeoma
+        <span class="right"> Made with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a></span>
+      </div>
+    </div>
+  </footer>
 
   </body>
 </html>
